Implementation of service test for learning progress